[project]
name = "pzero"
version = "0.1.0"
description = "Adapting SLAM-MuZero for POMDPs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightzero",
    "minigrid",
    "numba>=0.61.2",
    "pyecharts>=2.0.8",
    "tensorflow>=2.18.1",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]

[tool.uv.sources]
lightzero = { path = "LightZero", editable = true }
minigrid = { path = "Minigrid", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
